--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+	<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        .selected {
+            color: #00f;
+            background-color: #eee;
+        }
+    </style>
+</head>
+<body>
+    <div data-ns-test="block-inline-p">
+        <p class="selected">Paragraph 1</p>
+        <p>Paragraph 2</p>
+        <p class="selected">Paragraph 3</p>
+		<p>Paragraph 4</p>
+    </div>
+</body>
+</html>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
