--- a/main.html
+++ b/main.html
@@ -11,17 +11,14 @@
 <html>
 <head>
     <style>
-        .selected {
-            color: #00f;
-            background-color: #eee;
-        }
+    
     </style>
 </head>
 <body>
     <div data-ns-test="block-inline-p">
-        <p class="selected">Paragraph 1</p>
+        <p class="selector">Paragraph 1</p>
         <p>Paragraph 2</p>
-        <p class="selected">Paragraph 3</p>
+        <p class="selector">Paragraph 3</p>
 		<p>Paragraph 4</p>
     </div>
 </body>
